kubernetes/mysql-db.yml
---
apiVersion: apps/v1
kind: Deployment  
metadata:
  name: mysql-db
  labels:
    app: mysql-db
spec:
  template:
    metadata:
      labels:
        app: mysql-db
    spec:
      containers:
      - name: mysql
        image: mysql
        ports:
        - containerPort: 3306
  replicas: 1
  selector:
    matchLabels:
      app: mysql-db
