kubernetes/bankapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bankapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bankapp
  template:
    metadata:
      labels:
        app: bankapp
    spec:
      containers:
      - name: bankapp
        image: sambitmass/demo:bankapp2
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: bankapp
spec:
  selector:
    app: bankapp
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30001
  type: NodePort
