kubernetes/bankingapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bankingapp-service
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30001
  selector:
    app: bankingapp
